# dotmgr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.opencode/: opencode.json
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  CONTEXT_AS_CODE.md  CONTRIBUTING.md  QA_STRATEGY.md  ROADMAP.md  manifest-schema-v1.md
docs/adr/: ADR-001-python-over-rust.md  ADR-002-gnu-stow-over-chezmoi.md  TEMPLATE.md
docs/tasks/: user-scenarios.md
schemas/: manifest-v1.json
src/dotmgr/: __main__.py
