[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmgr"
version = "0.1.0"
description = "Declarative, idempotent dotfile manager"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "questionary>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
dotmgr = "dotmgr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
